port to 26.1 snapshot and bug fix